k8s_deployment_final.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: spokes
spec:
  replicas: 6
  selector:
    matchLabels:
      app: spokes
  template:
    metadata:
      labels:
        app: spokes
    spec:
      containers:
      - name: spokes
        image: gitea.glad0s.servers/jip/pi_calc_spoke:latest
        imagePullPolicy: "Always"
